...
    <string name="toast_failed_password_confirm">Password confirmation failed.</string>
    <string name="toast_registration_failed">User registration failed.</string>
    <string name="toast_welcome">Welcome, </string>
    <string name="toast_wrong_credentials">User login failed. Please, check your credentials and try again.</string>
    <string name="toast_login_successful">Login successful.</string>
    <string name="toast_login_guest">Continue as guest.</string>
    <string name="toast_empty_post_title">Please, enter post title.</string>
    <string name="toast_empty_post_details">Please, enter post details.</string>
    <string name="toast_user_must_authenticate">Please, login and/or register to post.</string>
    <string name="toast_user_settings_updated">User setting updated..</string>
</resources>
