<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        app:showAsAction="never"
        android:id="@+id/menu_item_add_post"
        android:title="@string/add_post" />
    <item
        app:showAsAction="never"
        android:id="@+id/menu_item_user_settings"
        android:title="@string/user_settings" />
    <item
        app:showAsAction="never"
        android:id="@+id/menu_item_log_out"
        android:title="@string/log_out" />
</menu>