<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.LoginActivity">

    <!-- Logo placeholder -->
    <ImageView
        android:id="@+id/imageViewLoginLogoPlaceholder"
        android:layout_width="192dp"
        android:layout_height="192dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/desc_login_logo_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app_logo"
        tools:srcCompat="@tools:sample/avatars" />

    <!-- Username -->
    <EditText
        android:id="@+id/editTextLoginEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="false"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLoginLogoPlaceholder" />

    <!-- Password -->
    <EditText
        android:id="@+id/editTextLoginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="false"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextLoginEmail"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/editTextLoginEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextLoginEmail" />

    <!-- Login button -->
    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_login_24"
        android:text="@string/text_login"
        app:layout_constraintEnd_toEndOf="@+id/editTextLoginEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextLoginEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextLoginPassword"
        tools:ignore="RtlHardcoded" />

    <!-- Register button -->
    <Button
        android:id="@+id/buttonRegisterRedirect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_register_24"
        android:text="@string/text_register"
        app:layout_constraintEnd_toEndOf="@+id/editTextLoginEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextLoginEmail"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
        tools:ignore="RtlHardcoded" />

    <!-- Progress bar -->
    <ProgressBar
        android:id="@+id/progressBarLogin"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>